A lot of code cleanup after inspection